i dont even know what i did

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,2 +1,11 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
+
+:root {
+  --ui-primary: var(--color-blue-400);
+  --ui-secondary: var(--color-blue-950);
+  --ui-success: var(--ui-color-success-500);
+  --ui-info: var(--ui-color-info-500);
+  --ui-warning: var(--ui-color-warning-500);
+  --ui-error: var(--ui-color-error-500);
+}
